apps/tokenization-service/infra/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tokenization-service
  labels:
    istio-injection: enabled
