apps/tokenization-service/infra/kubernetes/07-peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: tokenization-service-mtls
  namespace: tokenization-service
spec:
  mtls:
    mode: STRICT
