apps/tokenization-service/infra/kubernetes/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: tokenization-service
  namespace: tokenization-service
spec:
  mtls:
    mode: STRICT
