apps/tokenization-service/infra/kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokenization-service-svc
  namespace: tokenization-service
spec:
  selector:
    app: tokenization-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
