apps/tokenization-service/infra/kubernetes/06-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: tokenization-service-authz
  namespace: tokenization-service
spec:
  selector:
    matchLabels:
      app: tokenization-service
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - /actuator/health
              - /actuator/health/liveness
              - /actuator/health/readiness
    - to:
        - operation:
            paths:
              - /v1/*
      from:
        - source:
            requestPrincipals:
              - "*"
